--- a/css/index.css
+++ b/css/index.css
@@ -1,10 +1,11 @@
 body{
 	margin: 0px;
 	padding: 0px;
+	width: 100%;
+	overflow-x: hidden; 
 }
 header{
 	height: 100vh;
-	background-color: #191919;
 	background-position:50% 50%;
 	background-size: cover;
 	background-repeat: no-repeat;
