--- a/css/index.css
+++ b/css/index.css
@@ -8,5 +8,6 @@ header{
 	height: 100vh;
 	background-position:50% 50%;
 	background-size: cover;
+	background-attachment: fixed;
 	background-repeat: no-repeat;
 }
