--- a/css/bulles.css
+++ b/css/bulles.css
@@ -4,6 +4,7 @@
 	width: 100%;
 	overflow: hidden;
 	position: absolute;
+	background-attachment: fixed;
 	background-size: cover;
 	background-position:50% 50%;
 	background-repeat: no-repeat;
@@ -13,7 +14,7 @@
 }
 .blobCont {
 	filter: blur(0);
-	position: absolute;
+	position: fixed;
 	width: 100vw;
 	height: 100vh;
 	z-index: -1;
