--- a/css/menu.css
+++ b/css/menu.css
@@ -9,8 +9,14 @@ nav {
   transform: translate3d(25px, -25px, 0);
   transition: transform 0.5s cubic-bezier(0.3, 1.4, 0.5, 0.9);
 }
+
+nav:hover{
+  cursor: context-menu;
+}
+
 nav.open {
   transform: translate3d(0, 0, 0);
+  z-index: 1000;
 }
 nav.top-right {
   top: -140px;
@@ -38,6 +44,7 @@ nav.top-right {
   pointer-events: auto;
   opacity: 1;
 }
+
 .l1 {
   top: 0px;
   left: 0px;
@@ -147,6 +154,7 @@ nav.top-right {
   transform: scale3d(0.9, 0.9, 0.9) rotate3d(0, 0, 1, 10deg);
 }
 .l5 {
+  z-index: 1000;
   top: 200px;
   left: 200px;
   right: 200px;
