--- a/css/skillbar.css
+++ b/css/skillbar.css
@@ -3,7 +3,7 @@
 	display:block;
 	margin: 0 auto;
 	margin-top: 50px;
-	width:50%;
+	width: 50%;
 	background:#eee;
 	height:35px;
 	border-radius:3px;
@@ -71,3 +71,22 @@
 	color:#ffffff;
 	color:rgba(0, 0, 0, 0.4);
 }
+
+// Extra small devices (portrait phones, less than 576px)
+@media (max-width: 575.98px) {
+	.skillbar{
+		width: 50%;
+	}
+}
+
+// Small devices (landscape phones, 576px and up)
+@media (min-width: 576px) and (max-width: 767.98px) { ... }
+
+// Medium devices (tablets, 768px and up)
+@media (min-width: 768px) and (max-width: 991.98px) { ... }
+
+// Large devices (desktops, 992px and up)
+@media (min-width: 992px) and (max-width: 1199.98px) { ... }
+
+// Extra large devices (large desktops, 1200px and up)
+@media (min-width: 1200px) { ... }
