--- a/css/cards.css
+++ b/css/cards.css
@@ -1,10 +1,10 @@
-* {
+#works {
   box-sizing: content-box;
 }
 
 .card {
-  width: 200px;
-  height: 360px;
+  width: 300px;
+  height: 300px;
   border-radius: 15px;
   padding: 1.5rem;
   background: white;
@@ -16,6 +16,7 @@
 
 .card:hover {
   transform: translateY(20px);
+  box-shadow: 0px 0px 0px rgba(0, 0, 0, 0.5);
 }
 
 .card:hover:before {
@@ -86,18 +87,18 @@
   background: dodgerblue;
   color: white;
 }
-
-// Extra small devices (portrait phones, less than 576px)
+/*
+/* Extra small devices (portrait phones, less than 576px)
 @media (max-width: 575.98px) { ... }
 
-// Small devices (landscape phones, 576px and up)
+/* Small devices (landscape phones, 576px and up)
 @media (min-width: 576px) and (max-width: 767.98px) { ... }
 
-// Medium devices (tablets, 768px and up)
+/* Medium devices (tablets, 768px and up)
 @media (min-width: 768px) and (max-width: 991.98px) { ... }
 
-// Large devices (desktops, 992px and up)
+/* Large devices (desktops, 992px and up)
 @media (min-width: 992px) and (max-width: 1199.98px) { ... }
 
-// Extra large devices (large desktops, 1200px and up)
-@media (min-width: 1200px) { ... }
+/* Extra large devices (large desktops, 1200px and up)
+@media (min-width: 1200px) { ... }*/
