--- a/css/index.css
+++ b/css/index.css
@@ -1,5 +1,6 @@
 @import url('https://fonts.googleapis.com/css?family=Varela+Round');
-body{
+@import url('https://fonts.googleapis.com/css?family=Montserrat:400,700');
+html, body{
 	margin: 0px;
 	padding: 0px;
 	width: 100%;
@@ -59,18 +60,12 @@ header{
 	text-align: center;	
 }
 
-.about h1{
-	font-size: 3vw;
-	margin: 10vh;
-}
-
 .about p{
 	font-size: 115%; 
 	text-align: left;
 }
 
 .about .p{
-	width: 35vw;
 	margin: 0 auto;
 	padding: 4vw;
 }
@@ -90,10 +85,6 @@ header{
 	color: white;
 }
 
-.skills h1:nth-child(1){
-	font-size: 3vw;
-	margin: 10vh;
-}
 
 .works {
 	text-align: center;
@@ -101,8 +92,8 @@ header{
 }
 
 .h1{
-	font-size: 3vw;
-	margin: 10vh;
+	font-size: 2rem;
+	margin: 50px 0px;
 }
 
 .card{
@@ -124,4 +115,206 @@ header{
 .skills .col-md-12{
 	padding-left: 0;
 	padding-right: 0;
+}
+
+.contact{
+	  text-align:center;
+  }
+.contact h1{
+	  color: #fff;
+  }
+  
+  .contact  #form-main{
+	  width:100%;
+	  padding-top:0px;
+  }
+  
+.contact  #form-div {
+	background: #fff;
+	margin: 0 auto;
+	padding:35px;
+	width: 450px;
+	margin-top:30px;
+	box-shadow: 0px 0px 16px 8px rgba(0, 0, 0, 0.479);
+}
+  
+  .contact  .feedback-input {
+	  color:#000;
+	  font-family: Montserrat, Arial, sans-serif;
+		font-weight:300;
+	  font-size: 14px;
+	  border-radius: 0;
+	  line-height: 22px;
+	  background-color: #fff;
+	  padding: 13px 13px 13px 13px;
+	  margin-bottom: 10px;
+	  width:100%;
+	  -webkit-box-sizing: border-box;
+	  -moz-box-sizing: border-box;
+	  -ms-box-sizing: border-box;
+	  box-sizing: border-box;
+	border: 0px solid transparent;
+	border-bottom: 1px solid #000;
+  }
+  
+  .contact  .feedback-input:focus{
+	  background: #fff;
+	  box-shadow: 0;
+	  color: #000;
+	  outline: none;
+	padding: 13px 13px 13px 13px;
+  }
+  
+  .contact .focused{
+	  color:#000;
+	  border:#30aed6 solid 2px;
+  }
+  
+  .contact  textarea {
+	  width: 100%;
+	  height: 150px;
+	  line-height: 150%;
+	  resize:vertical;
+  }
+  
+  .contact  input:hover, .contacttextarea:hover,
+  .contact input:focus,.contact textarea:focus {
+	  background-color:white;
+  }
+  
+  .contact  #button-blue{
+	  font-family: 'Montserrat', Arial, Helvetica, sans-serif;
+	  float:left;
+	  width: 100%;
+	  border: 0px solid transparent;
+	  cursor:pointer;
+	  background-color: #000;
+	  color:white;
+	  font-size:18px;
+	  padding-top:22px;
+	  padding-bottom:22px;
+	  -webkit-transition: all 0.3s;
+	  -moz-transition: all 0.3s;
+	  transition: all 0.3s;
+	margin-top:-4px;
+	font-weight:300;
+  }
+  
+  .contact #button-blue:hover{
+	  background-color: #fff;
+	  color: #000;
+	border: 1px solid #000;
+  }
+	  
+  .contact .submit:hover {
+	  color: #3498db;
+  }
+	  
+  .contact  .ease {
+	  width: 0px;
+	  height: 74px;
+	  background-color: #fbfbfb;
+	  -webkit-transition: .3s ease;
+	  -moz-transition: .3s ease;
+	  -o-transition: .3s ease;
+	  -ms-transition: .3s ease;
+	  transition: .3s ease;
+  }
+  
+  .contact  .submit:hover .ease{
+	width:100%;
+	background-color:white;
+  }
+
+.contact a {
+	display: inline-block;
+	height: 100px;
+	width: 100px;
+	border-radius: 190px;
+	border: 3px solid #27ae60;
+	background: #27ae60;
+	text-align: center;
+	text-decoration: none;
+	color: #fff;
+	transition: all .2s;
+}
+  
+  .contact .label {
+	line-height: 100px;
+	font-size: 40px;
+	font-weight: bold;
+	font-style: normal;
+	transition: all .2s;
+  }
+
+  .contact  .effect6 {
+	background-color: #FFF;
+	box-shadow: 0px -100px 0 0 #27ae60 inset;
+  }
+  .contact  .effect6:hover {
+	  color: #27ae60;
+	box-shadow: 0px 0 0 0 #27ae60 inset;
+  }
+  .contact  .effect6:active {
+	box-shadow: 0px 100px 0 0 #27ae60 inset;
+  }
+
+.contact .flexedContact{
+	display: flex;
+	flex-wrap: wrap;
+	justify-content: space-evenly;
+	align-items: center;
+}
+
+footer{
+	background-color: #222;
+	padding: 50px 0px;
+}
+
+footer a {
+	display: inline-block;
+	height: 100px;
+	width: 100px;
+	border-radius: 190px;
+	border: 3px solid #222;
+	background: #222;
+	text-align: center;
+	text-decoration: none;
+	color: #fff;
+	transition: all .2s;
+}
+footer .label {
+	line-height: 100px;
+	font-size: 40px;
+	font-weight: bold;
+	font-style: normal;
+	transition: all .2s;
+}  
+footer .effect5:hover {
+	color: #222;
+	box-shadow: 0px 0 0 11px #FFF,  0px 0 0 10px #222, 0px 0 0 50px #FFF inset;
+}
+footer .effect5:active {
+	box-shadow: 0px 0 0 11px #222,  0px 0 0 10px #222, 0px 0 0 50px #FFF inset;
+}
+footer .effect5:active .label {
+	color: #222;
+}
+footer .socials{
+	display: flex;
+	justify-content: space-evenly;
+}
+@media only screen and (max-width: 580px) {
+	.contact  #form-div{
+		left: 3%;
+		width: 88%;
+		padding-left: 3%;
+		padding-right: 3%;
+	}
+}
+
+@media (max-width: 1367px) {
+	.notAvailable{
+		display: none;
+	}
 }
